Added UseGetStreamWithImageRotatedForExternalStorage in ImagePickerHelper as a workaround for IOS rotation bug. This issue should be fixed since 4.4.8
Updated nuget packages to latest