@@ -7,13 +7,14 @@ namespace XamBasePacket.Interfaces.Api
 {
     public interface IHttpClientOptions
     {
+        string Name { get; set; }
         Uri BaseAddress { get; set; }
         HttpMessageHandler MessageHandler { get; set; }
         Priority Priority { get; set; }
         Func<HttpRequestMessage, Task<string>> AuthTokenFunction { get; set; }
     }
 
-    public interface IHttpClientProvider
+    public interface IHttpClientProvider : IHttpClientFactory
     {
         HttpClient GetClient(IHttpClientOptions options = null);
         Task<HttpClient> GetClientAsync(IHttpClientOptions options = null);
