@@ -18,15 +18,16 @@
     <ItemGroup>
         <PackageReference Include="CommonServiceLocator" Version="2.0.5" />
         <PackageReference Include="fusillade" Version="2.0.5" />
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.2" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.3" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.3" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-        <PackageReference Include="Plugin.Permissions" Version="5.0.0-beta" />
+        <PackageReference Include="Plugin.Permissions" Version="6.0.1" />
         <PackageReference Include="Polly" Version="7.2.0" />
         <PackageReference Include="Prism.Forms" Version="7.2.0.1422" />
-        <PackageReference Include="Refit" Version="5.0.23" />
-        <PackageReference Include="Xam.Plugin.Media" Version="4.4.10-beta" />
+        <PackageReference Include="Refit" Version="5.1.54" />
+        <PackageReference Include="Xam.Plugin.Media" Version="5.0.1" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
-        <PackageReference Include="Xamarin.Essentials" Version="1.4.0" />
+        <PackageReference Include="Xamarin.Essentials" Version="1.5.2" />
     </ItemGroup>
 
     <ItemGroup>
