@@ -1,2 +1,3 @@
-Added UseGetStreamWithImageRotatedForExternalStorage in ImagePickerHelper as a workaround for IOS rotation bug. This issue should be fixed since 4.4.8
-Updated nuget packages to latest
+Added Storage services
+Added IApp interface
+Extended IHttpclientprovider to use Microsoft httpclient facotry
